--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vue-slider-component": "^4.1.0-beta.7"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
