--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,8 +4,8 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "strict": true,
     
-
     "paths": {
       "@/*": ["./src/*"]
     }
