--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
+    "smoothscroll-polyfill": "^0.4.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
